firewall-infra
# Generated by iptables-save v1.4.21 on Sun Jul  3 14:04:13 2016
*nat
:PREROUTING ACCEPT [764:73523]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [74:24272]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o ens3 -j MASQUERADE
COMMIT
# Completed on Sun Jul  3 14:04:13 2016
# Generated by iptables-save v1.4.21 on Sun Jul  3 14:04:13 2016
*filter
:INPUT DROP [13:4272]
:FORWARD DROP [6:673]
:OUTPUT DROP [13:4264]
:syn_flood - [0:0]
-A INPUT -m state --state INVALID -j LOG --log-prefix "INVALID " --log-tcp-sequence --log-tcp-options --log-ip-options
-A INPUT -m state --state INVALID -j DROP
-A INPUT -i ens3 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j syn_flood
-A FORWARD -d 192.168.0.0/24 -o ens9 -p tcp -m tcp --sport 80 -j ACCEPT
-A FORWARD -d 192.168.0.0/24 -o ens9 -p tcp -m tcp --sport 443 -j ACCEPT
-A FORWARD -d 192.168.0.0/24 -o ens9 -p udp -m udp --sport 53 -j ACCEPT
-A FORWARD -i ens9 -p tcp -m tcp --sport 1024:65535 -j ACCEPT
-A FORWARD -i ens9 -p udp -m udp --sport 1024:65535 -j ACCEPT
-A OUTPUT -o ens3 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o ens3 -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A OUTPUT -o ens3 -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT
-A OUTPUT -d 208.67.222.222/32 -o ens3 -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
-A OUTPUT -d 208.67.220.220/32 -o ens3 -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
-A syn_flood -m limit --limit 10/sec -j RETURN
-A syn_flood -j DROP
COMMIT
# Completed on Sun Jul  3 14:04:13 2016
